2003-04-28  Max Horn  <max@quendi.de>

	* updated base-files package to 1.7.1, matching (un)stable CVS

2003-02-28  Max Horn  <max@quendi.de>

	* updated ncurses package to 5.3, matching (un)stable CVS

2003-02-27  Max Horn  <max@quendi.de>

	* Added MD5 values back (now that we use /sbin/md5 to calculate the MD5
	  checksum, their presence doesn't break bootstrap anymore).

2002-12-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* modify the apt sources.list configuration file, to use 10.2/release
	and 10.2/current rather that release and current; also add a line to
	the postinstall script to make this change for users with custom
	configurations (modifications from Ben Hines)
	
2002-10-11  Max Horn  <max@quendi.de>

	* fixed an issue with apt (preventing it from using its own timegm function)
	
2002-10-03  Max Horn  <max@quendi.de>
	
	* fixed various packages to really use the Fink copies of source files
	  (during bootstrap, *never* relay on 3rd party servers!)

2002-08-05  Max Horn  <max@quendi.de>
	
	* new base-files version 1.6

2002-06-14  Max Horn  <max@quendi.de>
	
	* updated gettext and libiconv to fix gcc3/10.2 issues

2002-06-08  Max Horn  <max@quendi.de>
	
	* updated ncurses package to match (un)stable CVS (fixes gcc 3 build problem)

2002-05-11  Max Horn  <max@quendi.de>
	
	* updated apt package to match (un)stable CVS

2002-05-11  Max Horn  <max@quendi.de>
	
	* debianutils-1.15-4.*, apt-0.5.4-1.*: removed
	* debianutils-1.16-1.*, apt-0.5.4-2.*: added

2002-05-04  Max Horn  <max@quendi.de>
	
	* Changed all source URLs once more to use the new "sourceforge" mirror

2002-04-24  Max Horn  <max@quendi.de>

	* bzip2-1.0.2-1.info, debianutils-1.15-4.info,
	gettext-0.10.40-2.info, gzip-1.2.4a-6.info,
	storable-pm-1.0.14-1.info: changed source URLs to our own copies of
	the files
	
	* ChangeLog: added

2002-04-19  Max Horn  <max@quendi.de>

	* storable-pm-1.0.14-1.info: made storable-pm an 'important'
	package like apt is 
