@@ -1,0 +1,12 @@
+Package: storable-pm
+Version: 1.0.14
+Revision: 5
+Type: bundle
+Depends: storable-pm560 | perl580-core | perl581-core
+Description: Placeholder for versioned Storable packages
+DescPackaging: <<
+  This version of storable-pm can be installed when /usr/bin/perl is either 
+  5.6.0, 5.8.0, or 5.8.1.  It is appropriate for bootstrapping in all cases.
+<<
+Maintainer: Dave Morrison <dmrrsn@users.sourceforge.net>
+Homepage: http://search.cpan.org/author/RAM/
