@@ -33,10 +33,10 @@ my ($script, $cmd);
 
 ### check the perl version
 
-if ("$]" == "5.006" or "$]" == "5.008") {
+if ("$]" == "5.006" or "$]" == "5.008" or "$]" == "5.008001") {
     print "Found perl version $].\n";
 } else {
-die "\nSorry, your /usr/bin/perl is version $], but Fink requires either\nversion 5.6.0 (5.006), or 5.8.0 (5.008).\n\n";
+die "\nSorry, your /usr/bin/perl is version $], but Fink requires either\nversion 5.6.0 (5.006), 5.8.0 (5.008), or 5.8.1 (5.008001).\n\n";
 }
 
 ### check if we're unharmed
